--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "thesparksfoundation",
+  "homepage": "https://snpy-w.github.io/PaymentGateway",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
